# aidoku-community-sources

./: README.md  index.json  index.min.json
.github/workflows/: build.yaml
.idx/: dev.nix
sources/: ar.aasq-v1.aix  ar.aresmanga-v7.aix  ar.azoramanga-v1.aix  ar.onma-v1.aix  ar.ozulscans-v4.aix  ar.swatmanga-v6.aix  bg.utsukushii-v1.aix  en.anigliscans-v2.aix  en.arcrelight-v3.aix  en.assortedscans-v4.aix  en.astrascans-v1.aix  en.asurascans-v8.aix  en.dankefurslesen-v1.aix  en.disasterscans-v3.aix  en.dynastyscans-v3.aix  en.fallen-angels-v1.aix  en.firescans-v1.aix  en.firstkissmanga-v5.aix  en.flamecomics-v2.aix  en.galaxydegenscans-v1.aix  en.guya-v1.aix  en.hachirumi-v1.aix  en.harimanga-v2.aix  en.hentai2read-v2.aix  en.hentaifox-v4.aix  en.hiperdex-v4.aix  en.lhtranslation-v4.aix  en.lilymanga-v8.aix  en.mangabat-v5.aix  en.mangademon-v5.aix  en.mangafox-v4.aix  en.mangairo-v1.aix  en.mangakatana-v3.aix  en.manganato-v4.aix  en.mangapill-v2.aix  en.mangareadorg-v1.aix  en.mangatx-v9.aix  en.manhuafast-v3.aix  en.manhuaplus-v9.aix  en.manhuaus-v4.aix  (+136 more)
src/rust/en.asurascans/: Cargo.toml
src/rust/en.dynastyscans/: Cargo.toml
src/rust/en.hentai2read/: Cargo.toml
src/rust/en.hentaifox/: Cargo.toml
src/rust/en.mangademon/: Cargo.toml
src/rust/mmrcms/sources/komikid/: Cargo.toml
src/rust/vi.cuutruyenreborn/: .gitignore  Cargo.toml  build.rs  build.sh
src/rust/vi.cuutruyenreborn/res/: source.json
src/rust/vi.cuutruyenreborn/src/: lib.rs  parser.rs  search.rs  utils.rs
src/rust/vi.cuutruyenreborn/src/crypto/: config.rs  crypto.rs  main.rs  mod.rs
(+195 files in other folders)
