[package]
name = "cuutruyenreborn"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aes-gcm = { version = "0.10.3", default-features = false, features = ["alloc", "aes"] }
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", branch = "legacy",  features = ["helpers"] }
base64 = { version = "0.22.1", default-features = false, features = ["alloc"] }
imp = "0.1.0"
spin = { version = "0.10.0", default-features = false, features = ["once"] }
time = { version = "0.3", default-features = false, features = ["alloc", "parsing"] }
url = { version = "2.5.7", default-features = false }
