[package]
name = "komikid"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", branch = "legacy" }
mmrcms_template = { path = "../../template" }
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
itoa = "1.0.2"
